# Minecraft-game-engine-cgj-2019-2020

./: .gitignore  CMakeLists.txt  Game engine.sln  LICENSE  README.md  install.txt
Game engine/: Game engine.vcxproj  Game engine.vcxproj.filters
assets/Blocks/: Air.block  Bedrock.block  Cactus.block  DeadShrub.block  Diamond.block  Dirt.block  Glass.block  Grass.block  Leaves.block  Redstone.block  Rose.block  Sand.block  Stone.block  TallGrass.block  Water.block  Wood.block  WoodBase.block
src/: BasicTexture.cpp  BasicTexture.h  Constants.h  Entity.h  FPSCamera.cpp  FPSCamera.h  Frustum.cpp  Frustum.h  GameManager.cpp  GameManager.h  GameObject.h  ICamera.cpp  ICamera.h  MatrixFactory.cpp  MatrixFactory.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Model.cpp  Model.h  NoiseGenerator.cpp  NoiseGenerator.h  PerlinNoise.h  Quaternion.cpp  Quaternion.h  ResourcesManager.cpp  ResourcesManager.h  SceneGraph.cpp  SceneGraph.h  SceneNode.cpp  SceneNode.h  ScreenShot.cpp  ScreenShot.h  ShaderProgram.h  ShadowMapping.cpp  ShadowMapping.h  Skybox.cpp  Skybox.h  SphericalCamera.cpp  (+20 more)
src/Maths/: VectorXYZ.h
src/Physics/: AABB.h
src/Renderer/: RenderInfo.h
src/Sky/: Cloud.cpp  Cloud.h  Sky.cpp  Sky.h
src/Utils/: Array2D.h  NonCopyable.h  NonMovable.h  Random.cpp  Random.h  Singleton.h
src/World/: World.cpp  World.h  WorldConstants.h
src/shaders/: SkyColor.vert  chunk.frag  chunk.vert  clouds.frag  clouds.vert  fragmentSkybox.frag  shadowMapping.frag  shadowMappingDepth.vert  sun.frag  sun.vert  transparent.frag  transparent.vert  vertexShader.vert  water.frag  (+3 more)
(+25 files in other folders)
